Fix content jumping on location change

--- a/src/components/WeatherWrapper/WeatherWrapper.scss
+++ b/src/components/WeatherWrapper/WeatherWrapper.scss
@@ -1,17 +1,20 @@
 @import "../../styles/variables";
+@import "../../styles/mixins";
+
+$min-card-height: 474px;
 
 .weather-wrapper {
   display: flex;
   flex-direction: column;
   width: 80%;
-  max-width: 45rem;
+  max-width: 720px;
   margin: auto;
-  padding: 5rem 0;
+  padding: 80px 0;
 }
 
 .locations {
   display: flex;
-  margin-bottom: 2rem;
+  margin-bottom: 32px;
   justify-content: space-evenly;
   text-transform: uppercase;
 }
@@ -20,7 +23,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 474px;
+  min-height: $min-card-height;
   background-color: $color-white;
   border: $gutter-size solid $color-white;
   border-radius: $border-radius;
@@ -30,9 +33,13 @@
 
 .info {
   width: 100%;
-  height: 100%;
+  min-height: calc($min-card-height - 2 * $gutter-size);
   border-radius: $border-radius;
   background-color: $color-bg-blue;
   text-align: center;
   line-height: 100px;
+
+  @include breakpoint {
+    min-height: 950px;
+  }
 }
